Changed formatting me-page

--- a/me.html
+++ b/me.html
@@ -87,51 +87,110 @@ I am proficient in the following areas of production:
 
 <section>
 <h3>Film (2007 - )</h3>
+  <h4>Becoming Helen Keller (2016)</h4>
 <p>
-  <i>TBA</i>
-  <br>
-  (Pre-production for feature film)
+  Post Production Assistant, Marketing - PBS American Masters documentary
 </p>
+  <h4><a href="/index.html#nona">Nona (2016)</a></h4>
 <p>
-  <i>Becoming Helen Keller</i>
-  <br>
-  Post Production Assistant, Web Design, Marketing - PBS American Masters documentary
-</p>
-<p>
-  <a href="/index.html#nona"><i>Nona</i></a>
-  <br>
   Director, Cinematographer, Editor - My thesis film at Hampshire College
 </p>
+  <h4><a target="_blank" href="https://vimeo.com/140096300">Darkville (2015 - 2016)</a></h4>
 <p>
-  <a target="_blank" href="https://vimeo.com/140096300"><i>Darkville</i></a>
-  <br>
   Director of Photography - Channel 101 show screened at UCB Theatre (2 episodes)
 </p>
+  <h4><a target="_blank" href="http://shanghaiquartetfilm.com">The Shanghai String Quartet</a></h4>
 <p>
-  <a target="_blank" href="http://shanghaiquartetfilm.com"><i>The Shanghai String Quartet</i></a>
-  <br>
   Production Assistant - Audio recording for documentary film
 </p>
+  <h4><a href="/index.html#somethingrestless">Something Restless</a></h4>
 <p>
-  <a href="/index.html#somethingrestless"><i>Something Restless</i></a>
-  <br>
   Technical Director - Friend's thesis film at Hampshire College
 </p>
+  <h4><a href="/index.html#hazardlights">Hazard Lights</a></h4>
 <p>
-  <a href="/index.html#hazardlights"><i>Hazard Lights</i></a>
-  <br>
   Assistant Director - Friend's thesis film at Hampshire College
 </p>
+  <h4><a target="_blank" href="https://www.youtube.com/watch?v=0iOustk_6WY">The Games We Play</a></h4>
 <p>
-  <a target="_blank" href="https://www.youtube.com/watch?v=0iOustk_6WY"><i>The Games We Play</i></a>
-  <br>
   Camera - Friend's thesis film at Hampshire College
 </p>
-<br>
+</section>
+
+<section>
+<h3>Teaching (2012 - )</h3>
+  <h4>Media Alumni Fellow (2017)
+  <br>
+  Hampshire College</h4>
+<p>
+  Taught workshops in media production, mentored students and faculty with independent projects
+</p>
+  <h4>Guest Instructor (2016)
+  <br>
+  Amherst College</h4>
+<p>
+  FAMS-228: Super 8 Film and Digital Video
+</p>
+  <h4>Assistant Instructor (2015 - 2016)
+  <br>
+  Creative Media Institute</h4>
+<p>
+  Summer film program, 2 years
+</p>
+  <h4>Teaching Assistant (2014 - 2016)
+  <br>
+  Hampshire College</h4>
+<p>
+  HACU-0287: Performance & Directing
+  <br>
+  HACU-0209: Video 1
+  <br>
+  NS-0254: Science Fiction Film
+</p>
+  <h4>Instructor (2014)
+  <br>
+  Hampshire College</h4>
+<p>
+  Video Production Collective: Designed and taught a college level film course for 12 students
+</p>
+  <h4>Teaching Assistant (2012)
+  <br>
+  Kingswood Oxford School</h4>
+<p>
+  Advanced Digital Video course
+</p>
+</section>
+
+<section>
+<h3>Web, Graphics, Coding (2012 - )</h3>
+<p>
+  <a target="_blank" href="https://www.becominghelenkeller.org"><i>Becoming Helen Keller</i></a>
+  <br>
+  Web Design, Graphics - Squarespace, CSS, Photoshop
+</p>
+<p>
+  <a target="_blank" href="https://www.beehivesewing.com"><i>Beehive Sewing</i></a>
+  <br>
+  Site map and layout - Wordpress
+</p>
+<p>
+  <i>The Global Fibrosis Foundation</i>
+  <br>
+  Web Design and Graphics - Squarespace, CSS, Illustrator (2016)
+</p>
+</section>
+
+<section>
+<h3>Awards, Grants, Certifications</h3>
 <p>
   <i>Tom Joslin Grant</i>
   <br>
   Recipient for thesis film at Hampshire College
+</p>
+<p>
+  <i>Teaching Assistant Seminar Certificate</i>
+  <br>
+  Recipient of certification for a one semester course in teaching (Fall 2015)
 </p>
 <p>
   <i>Green Prize</i>
@@ -145,59 +204,6 @@ I am proficient in the following areas of production:
 </p>
 </section>
 
-<section>
-<h3>Teaching (2012 - )</h3>
-<p>
-  <i>Film Studies</i>
-  <br>
-  Guest Instructor - Amherst College (Fall 2016)
-</p>
-<p>
-  <i>Creative Media Institute</i>
-  <br>
-  Assistant Instructor - Summer film program, 2 years (2015 - 2016)
-</p>
-<p>
-  <i>Video 1, Performance & Directing, Science Fiction Film</i>
-  <br>
-  Teaching Assistant - Hampshire College, 3 semesters (2013 - 2016)
-</p>
-<p>
-  <i>Video Production Collective</i>
-  <br>
-  Instructor - Designed and taught a film course at Hampshire College for 12 students (Spring 2014)
-</p>
-<p>
-  <i>Advanced Digital Video</i>
-  <br>
-  Teaching Assistant - Kingswood Oxford (Spring 2012)
-</p>
-<br>
-<p>
-  <i>Teaching Assistant Seminar Certificate</i>
-  <br>
-  Recipient of certification for a one semester course in teaching (Fall 2015)
-</p>
-</section>
-
-<section>
-<h3>Web, Graphics, Coding (2012 - )</h3>
-<p>
-  <a target="_blank" href="https://www.becominghelenkeller.org"><i>Becoming Helen Keller</i></a>
-  <br>
-  Web Design and Graphics - Squarespace, CSS, Photoshop (2017)
-</p>
-<p>
-  <a target="_blank" href="https://www.beehivesewing.com"><i>Beehive Sewing</i></a>
-  <br>
-  Site map and layout - Wordpress (2016)
-</p>
-<p>
-  <i>The Global Fibrosis Foundation</i>
-  <br>
-  Web Design and Graphics - Squarespace, CSS, Illustrator (2016)
-</p>
-</section>
 <br><br>
 
 </div>
