--- a/me.html
+++ b/me.html
@@ -163,44 +163,37 @@ I am proficient in the following areas of production:
 
 <section>
 <h3>Web, Graphics, Coding (2012 - )</h3>
+  <h4><a target="_blank" href="https://www.becominghelenkeller.org">Becoming Helen Keller</a></h4>
 <p>
-  <a target="_blank" href="https://www.becominghelenkeller.org"><i>Becoming Helen Keller</i></a>
-  <br>
   Web Design, Graphics - Squarespace, CSS, Photoshop
 </p>
+  <h4><a target="_blank" href="https://www.beehivesewing.com">Beehive Sewing</a></h4>
 <p>
-  <a target="_blank" href="https://www.beehivesewing.com"><i>Beehive Sewing</i></a>
-  <br>
   Site map and layout - Wordpress
 </p>
+  <h4>The Global Fibrosis Foundation</h4>
 <p>
-  <i>The Global Fibrosis Foundation</i>
-  <br>
   Web Design and Graphics - Squarespace, CSS, Illustrator (2016)
 </p>
 </section>
 
 <section>
 <h3>Awards, Grants, Certifications</h3>
+  <h4>Tom Joslin Grant (2016)</h4>
 <p>
-  <i>Tom Joslin Grant</i>
-  <br>
   Recipient for thesis film at Hampshire College
 </p>
+  <h4>Teaching Assistant Seminar Certificate (2015)</h4>
 <p>
-  <i>Teaching Assistant Seminar Certificate</i>
-  <br>
-  Recipient of certification for a one semester course in teaching (Fall 2015)
+  Completed course in teaching
 </p>
+  <h4>Green Prize (2012)</h4>
 <p>
-  <i>Green Prize</i>
-  <br>
   Recipient for excellence in dramatics at Kingswood Oxford
 </p>
+  <h4>Williston-Northampton Film Festival (2012)</h4>
 <p>
-  <i>Williston-Northampton Film Festival</i>
-  <br>
-  Director of a short film screened in 2012
+  Director of a short film screened at festival
 </p>
 </section>
 
