--- a/me.html
+++ b/me.html
@@ -67,11 +67,11 @@ I am proficient in the following areas of production:
 </p>
 <p>
   <b>Cinematography:</b>
-  Canon 5DmkIII (Magic Lantern), Canon C100, Blackmagic, GoPro, 16mm Bolex, Super 8, Glidecam, Still photography (Digital, 35mm, medium and large format)
+  Canon 5DmkIII (Magic Lantern), Canon C100, Blackmagic, GoPro, 16mm Bolex, Super 8, Glidecam, still photography (digital, 35mm, medium, large format)
 </p>
 <p>
   <b>Editing:</b>
-  Premiere, After Effects, Photoshop, Final Cut Pro, DaVinci Resolve
+  Adobe Premiere, After Effects, Photoshop, Final Cut Pro, DaVinci Resolve
 </p>
 <p>
   <b>Audio:</b>
@@ -79,7 +79,7 @@ I am proficient in the following areas of production:
 </p>
 <p>
   <b>Lighting Design:</b>
-  Film set and live theater experience: Arri, Lowel, Kino, ETC
+  Film, Television, and Theatre: Arri, Lowel, Kino, ETC
 </p>
 <br><br>
 
@@ -99,21 +99,21 @@ I am proficient in the following areas of production:
 <p>
   Director of Photography - Channel 101 show screened at UCB Theatre (2 episodes)
 </p>
-  <h4><a target="_blank" href="http://shanghaiquartetfilm.com">The Shanghai String Quartet</a></h4>
+  <h4><a target="_blank" href="http://shanghaiquartetfilm.com">The Shanghai String Quartet (2016)</a></h4>
 <p>
   Production Assistant - Audio recording for documentary film
 </p>
-  <h4><a href="/index.html#somethingrestless">Something Restless</a></h4>
+  <h4><a href="/index.html#somethingrestless">Something Restless (2015)</a></h4>
 <p>
   Technical Director - Friend's thesis film at Hampshire College
 </p>
-  <h4><a href="/index.html#hazardlights">Hazard Lights</a></h4>
+  <h4><a href="/index.html#hazardlights">Hazard Lights (2014)</a></h4>
 <p>
   Assistant Director - Friend's thesis film at Hampshire College
 </p>
-  <h4><a target="_blank" href="https://www.youtube.com/watch?v=0iOustk_6WY">The Games We Play</a></h4>
+  <h4><a target="_blank" href="https://www.youtube.com/watch?v=0iOustk_6WY">The Games We Play (2014)</a></h4>
 <p>
-  Camera - Friend's thesis film at Hampshire College
+  Camera Operator - Friend's thesis film at Hampshire College
 </p>
 </section>
 
@@ -155,9 +155,9 @@ I am proficient in the following areas of production:
 </p>
   <h4>Teaching Assistant (2012)
   <br>
-  Kingswood Oxford School</h4>
+  Kingswood Oxford</h4>
 <p>
-  Advanced Digital Video course
+  Advanced Digital Video
 </p>
 </section>
 
@@ -169,11 +169,11 @@ I am proficient in the following areas of production:
 </p>
   <h4><a target="_blank" href="https://www.beehivesewing.com">Beehive Sewing</a></h4>
 <p>
-  Site map and layout - Wordpress
+  Site map, Layout - Wordpress
 </p>
   <h4>The Global Fibrosis Foundation</h4>
 <p>
-  Web Design and Graphics - Squarespace, CSS, Illustrator (2016)
+  Web Design, Graphics - Squarespace, CSS, Illustrator
 </p>
 </section>
 
@@ -181,11 +181,11 @@ I am proficient in the following areas of production:
 <h3>Awards, Grants, Certifications</h3>
   <h4>Tom Joslin Grant (2016)</h4>
 <p>
-  Recipient for thesis film at Hampshire College
+  Recipient for my thesis film at Hampshire College
 </p>
-  <h4>Teaching Assistant Seminar Certificate (2015)</h4>
+  <h4>Teaching Assistant Certificate (2015)</h4>
 <p>
-  Completed course in teaching
+  Completed seminar in teaching
 </p>
   <h4>Green Prize (2012)</h4>
 <p>
