--- a/tvstudio.html
+++ b/tvstudio.html
@@ -89,7 +89,7 @@
     <img name="preview" src="images/Cyc7.jpg" alt="Cyclorama"/>
   </div>
 <p>
-  Renovated old SD TV Studio into 4K Broadcast Studio with Cyclorama and 4 camera live switching
+  Renovated old SD TV studio into 4K broadcast facility with cyclorama and 4 camera live switching.
 </p>
 </div>
 
