--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Ben Cowper | film</title>
+<title>Ben Cowper | me</title>
 <link rel="stylesheet" href="styles.css">
 <link rel="author" href="humans.txt" />
 
@@ -26,29 +26,18 @@
 <meta name="msapplication-TileImage" content="icons/favicon-144.png">
 <meta name="msapplication-config" content="icons/browserconfig.xml">
 
-<style type="text/css">
-
-.thumbnails img {
-  height: 80px;
-  border: 2px solid #eeeeee;
-  margin: 0 2px 2px 0;
-}
-
-.thumbnails img:hover {
-  border: 2px solid #af5750;
-  cursor:pointer;
-}
-
-.preview img {
-  width: 800px;
+<style>
+img {
+  float: left;
+  margin: 0px 17px 0px 0px;
 }
 </style>
 </head>
 
 <body>
 <ul>
-  <li><a href="me.html">me</a></li>
-  <li><a class="active" href="index.html">film - personal</a></li>
+  <li><a class="active" href="index.html">me</a></li>
+  <li><a href="personal.html">film - personal</a></li>
   <li><a href="professional.html">film - professional</a></li>
   <li><a href="reel.html">reel</a></li>
   <li><a href="tvstudio.html">tv studio renovation</a></li>
@@ -62,200 +51,151 @@
 
 <hr color="#50A8AF">
 <h2>
-  Dreams (series, 2016 - )
+Ben Cowper
 </h2>
+<h3>
+cowpervideos@gmail.com
+</h3>
 <hr color="#50A8AF">
+
 <br>
-<div align="center">
-  <iframe src="https://player.vimeo.com/video/174029936?color=af5750&title=0&byline=0&portrait=0" width="450" height="253" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>  
-  <iframe src="https://player.vimeo.com/video/165776517?color=af5750&title=0&byline=0&portrait=0" width="450" height="253" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<br>
-  <iframe src="https://player.vimeo.com/video/174029854?color=af5750&title=0&byline=0&portrait=0" width="450" height="253" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-  <iframe src="https://player.vimeo.com/video/165776508?color=af5750&title=0&byline=0&portrait=0" width="450" height="300" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<br>
-<p>
-  director, editor, cinematographer, performer
-<br><br>
-  A series of experimental short films about people.
+<p><img src="images/Ben_Cowper.jpg" alt="Ben Cowper" height="350px" width="auto">
+I began my work in film production over 10 years ago, and in 2016 received a Bachelor of Arts in Cinematography and Editing from Hampshire College. As a freelance videographer I have filmed and edited over 100 videos for a wide variety of commercial and independent clients including: Yale University, Hampshire College, Mount Holyoke College, PBS American Masters, Cambridge University Press, ServiceNet, Northampton Chamber of Commerce, Beehive Sewing, and the Global Fibrosis Foundation.
 </p>
-</div>
-
-<br><br>
-
-<a name="nona"></a>
-<hr color="#50A8AF">
-<h2>
-	Nona (2016)
-</h2>
-<hr color="#50A8AF">
-<br>
-<div class="gallery" align="center">
-    <div class="preview" align="center">
-    <img name="preview" src="images/Nona1.jpg" alt="Nona"/>
-  </div>
-  <div class="thumbnails">
-    <img onmouseover="preview.src=Nona1.src" name="Nona1" src="images/Nona1.jpg" alt="Nona 1"/>
-    <img onmouseover="preview.src=Nona2.src" name="Nona2" src="images/Nona2.jpg" alt="Nona 2"/>
-    <img onmouseover="preview.src=Nona3.src" name="Nona3" src="images/Nona3.jpg" alt="Nona 3"/>
-    <img onmouseover="preview.src=Nona4.src" name="Nona4" src="images/Nona4.jpg" alt="Nona 4"/>
-    <img onmouseover="preview.src=Nona5.src" name="Nona5" src="images/Nona5.jpg" alt="Nona 5"/>
-    <img onmouseover="preview.src=Nona6.src" name="Nona6" src="images/Nona6.jpg" alt="Nona 6"/>
-  </div>
-<br>
 <p>
-  TRT 17m
-<br><br>
-  director, editor, cinematographer
-<br><br>
-  An experimental horror film about a hitchhiker’s descent into madness, adapted from a short story by Stephen King. The film was produced through King’s dollar baby program as my thesis film at Hampshire College.
-<br><br>
-  (For a private screening, please <a href="mailto:cowpervideos@gmail.com">contact me</a> directly)
+I am proficient in the following areas of production:
 </p>
-</div>
-
-<br><br>
-
-<hr color="#50A8AF">
-<h2>
-  ////\\\\ (2015)
-</h2>
-<hr color="#50A8AF">
-<br>
-<div align="center">
-  <iframe src="https://player.vimeo.com/video/132660943?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<br><br>
 <p>
-  TRT 3:14
-<br><br>
-  director, editor, cinematographer, performer
-<br><br>
-  An experimental short film.
+  <b>Cinematography:</b>
+  Canon 5DmkIII (Magic Lantern), Canon C100, Blackmagic, GoPro, 16mm Bolex, Super 8, Glidecam, still photography (digital, 35mm, medium, large format)
 </p>
-</div>
-
-<br><br>
-
-<hr color="#50A8AF">
-<h2>
-  Paris Film (2015)
-</h2>
-<hr color="#50A8AF">
-<br>
-<div align="center">
-  <iframe src="https://player.vimeo.com/video/140592868?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<br><br>
 <p>
-  TRT 5m
-<br><br>
-  director, editor, cinematographer
-<br><br>
-  Shot, edited, and self processed super 8 film in Paris.
+  <b>Editing:</b>
+  Adobe Premiere, After Effects, Photoshop, Final Cut Pro, DaVinci Resolve
 </p>
-</div>
-
-<br><br>
-
-<hr color="#50A8AF">
-<h2>
-  Even Though We Sometimes Fight (2015)
-</h2>
-<hr color="#50A8AF">
-<br>
-<div align="center">
-  <iframe src="https://player.vimeo.com/video/123589583?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<br><br>
 <p>
-  TRT 2:49
-<br><br>
-  director, editor, cinematographer, writer
-<br><br>
-  A short science fiction film about a near future dependance on technology and its applications in childcare.
+  <b>Audio:</b>
+  5.1 surround and stereo recording/mixing: Zoom, Tascam, ProTools, Audition, Logic
 </p>
-</div>
-
-<br><br>
-
-<a name="somethingrestless"></a>
-<hr color="#50A8AF">
-<h2>
-  Something Restless (2015)
-</h2>
-<hr color="#50A8AF">
-<br>
-<div align="center">
-  <iframe src="https://player.vimeo.com/video/127789780?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<br><br>
 <p>
-  TRT 35:19
-<br><br>
-  technical director, consulting cinematographer
-<br><br>
-  A friend's thesis film:
-<br>
-  Three vignette stories, each featuring a unique set of actors, thematically meld together into a single story of two college students’ fleeting but impactful time together before they graduate and part ways.
+  <b>Lighting Design:</b>
+  Film, Television, and Theatre: Arri, Lowel, Kino, ETC
 </p>
-</div>
-
 <br><br>
 
-<hr color="#50A8AF">
-<h2>
-  Incoming Call (2014)
-</h2>
-<hr color="#50A8AF">
-<br>
-<div align="center">
-  <iframe src="https://player.vimeo.com/video/93182932?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<br><br>
+<hr color="#af5750">
+
+<section>
+<h3>Film (2007 - )</h3>
+  <h4>Becoming Helen Keller (2016)</h4>
 <p>
-  TRT 3:12
-<br><br>
-  director, editor, cinematographer
-<br><br>
-  A cubist video piece.
+  Post Production Assistant, Marketing - PBS American Masters documentary
 </p>
-</div>
-
-<br><br>
-
-<hr color="#50A8AF">
-<h2>
-  December (2015)
-</h2>
-<hr color="#50A8AF">
-<br>
-<div align="center">
-  <iframe src="https://player.vimeo.com/video/119695079?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<br><br>
+  <h4><a href="/personal.html#nona">Nona (2016)</a></h4>
 <p>
-  TRT 2:24
-<br><br>
-  director, editor, cinematographer
-<br><br>
-  An experimental short film.
+  Director, Cinematographer, Editor - My thesis film at Hampshire College
 </p>
-</div>
-
-<br><br>
-
-<a name="hazardlights"></a>
-<hr color="#50A8AF">
-<h2>
-  Hazard Lights (2014)
-</h2>
-<hr color="#50A8AF">
-<br>
-<div align="center">
-  <iframe src="https://player.vimeo.com/video/106734653?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<br><br>
+  <h4><a target="_blank" href="https://vimeo.com/140096300">Darkville (2015 - 2016)</a></h4>
 <p>
-  TRT 16:52
-<br><br>
-  assistant director
-<br><br>
-  A friend's thesis film.
+  Director of Photography - Channel 101 show screened at UCB Theatre (2 episodes)
 </p>
-</div>
+  <h4><a target="_blank" href="http://shanghaiquartetfilm.com">The Shanghai String Quartet (2016)</a></h4>
+<p>
+  Production Assistant - Audio recording for documentary film
+</p>
+  <h4><a href="/personal.html#somethingrestless">Something Restless (2015)</a></h4>
+<p>
+  Technical Director - Friend's thesis film at Hampshire College
+</p>
+  <h4><a href="/personal.html#hazardlights">Hazard Lights (2014)</a></h4>
+<p>
+  Assistant Director - Friend's thesis film at Hampshire College
+</p>
+  <h4><a target="_blank" href="https://www.youtube.com/watch?v=0iOustk_6WY">The Games We Play (2014)</a></h4>
+<p>
+  Camera Operator - Friend's thesis film at Hampshire College
+</p>
+</section>
+
+<section>
+<h3>Teaching (2012 - )</h3>
+  <h4>Media Alumni Fellow (2017)
+  <br>
+  Hampshire College</h4>
+<p>
+  Taught workshops in media production, mentored students and faculty with independent projects
+</p>
+  <h4>Guest Instructor (2016)
+  <br>
+  Amherst College</h4>
+<p>
+  FAMS-228: Super 8 Film and Digital Video
+</p>
+  <h4>Assistant Instructor (2015 - 2016)
+  <br>
+  Creative Media Institute</h4>
+<p>
+  Summer film program, 2 years
+</p>
+  <h4>Teaching Assistant (2014 - 2016)
+  <br>
+  Hampshire College</h4>
+<p>
+  HACU-0287: Performance & Directing
+  <br>
+  HACU-0209: Video 1
+  <br>
+  NS-0254: Science Fiction Film
+</p>
+  <h4>Instructor (2014)
+  <br>
+  Hampshire College</h4>
+<p>
+  Video Production Collective: Designed and taught a college level film course for 12 students
+</p>
+  <h4>Teaching Assistant (2012)
+  <br>
+  Kingswood Oxford</h4>
+<p>
+  Advanced Digital Video
+</p>
+</section>
+
+<section>
+<h3>Web, Graphics, Coding (2012 - )</h3>
+  <h4><a target="_blank" href="https://www.becominghelenkeller.org">Becoming Helen Keller</a></h4>
+<p>
+  Web Design, Graphics - Squarespace, CSS, Photoshop
+</p>
+  <h4><a target="_blank" href="https://www.beehivesewing.com">Beehive Sewing</a></h4>
+<p>
+  Site map, Layout - Wordpress
+</p>
+  <h4>The Global Fibrosis Foundation</h4>
+<p>
+  Web Design, Graphics - Squarespace, CSS, Illustrator
+</p>
+</section>
+
+<section>
+<h3>Awards, Grants, Certifications</h3>
+  <h4>Tom Joslin Grant (2016)</h4>
+<p>
+  Recipient for my thesis film at Hampshire College
+</p>
+  <h4>Teaching Assistant Certificate (2015)</h4>
+<p>
+  Completed seminar in teaching
+</p>
+  <h4>Green Prize (2012)</h4>
+<p>
+  Recipient for excellence in dramatics at Kingswood Oxford
+</p>
+  <h4>Williston-Northampton Film Festival (2012)</h4>
+<p>
+  Director of a short film screened at festival
+</p>
+</section>
 
 <br><br>
 
