--- a/reel.html
+++ b/reel.html
@@ -29,8 +29,8 @@
 
 <body>
 <ul>
-  <li><a href="me.html">me</a></li>
-  <li><a href="index.html">film - personal</a></li>
+  <li><a href="index.html">me</a></li>
+  <li><a href="personal.html">film - personal</a></li>
   <li><a href="professional.html">film - professional</a></li>
   <li><a class="active" href="reel.html">reel</a></li>
   <li><a href="tvstudio.html">tv studio renovation</a></li>
