--- a/tvstudio.html
+++ b/tvstudio.html
@@ -47,8 +47,8 @@
 
 <body>
 <ul>
-  <li><a href="me.html">me</a></li>
-  <li><a href="index.html">film - personal</a></li>
+  <li><a href="index.html">me</a></li>
+  <li><a href="personal.html">film - personal</a></li>
   <li><a href="professional.html">film - professional</a></li>
   <li><a href="reel.html">reel</a></li>
   <li><a class="active" href="tvstudio.html">tv studio renovation</a></li>
