--- a/index.html
+++ b/index.html
@@ -50,12 +50,8 @@ img {
 <div style="margin-left:17%;padding:1px 16px;height:1000px;">
 
 <hr color="#50A8AF">
-<h2>
-Ben Cowper
-</h2>
-<h3>
-cowpervideos@gmail.com
-</h3>
+<h2>Ben Cowper</h2>
+<h3>cowpervideos@gmail.com</h3>
 <hr color="#50A8AF">
 
 <br>
