--- a/personal.html
+++ b/personal.html
@@ -72,7 +72,7 @@
 <br>
   <iframe src="https://player.vimeo.com/video/174029854?color=af5750&title=0&byline=0&portrait=0" width="450" height="253" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   <iframe src="https://player.vimeo.com/video/165776508?color=af5750&title=0&byline=0&portrait=0" width="450" height="300" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-<br>
+<br><br>
 <p>
   director, editor, cinematographer, performer
 <br><br>
@@ -107,7 +107,7 @@
 <br><br>
   director, editor, cinematographer
 <br><br>
-  An experimental horror film about a hitchhiker’s descent into madness, adapted from a short story by Stephen King. The film was produced through King’s dollar baby program as my thesis film at Hampshire College.
+  An experimental horror film about a hitchhiker's descent into madness, adapted from a short story by Stephen King. The film was produced through King's dollar baby program as my thesis film at Hampshire College.
 <br><br>
   (For a private screening, please <a href="mailto:cowpervideos@gmail.com">contact me</a> directly)
 </p>
@@ -149,7 +149,7 @@
 <br><br>
   director, editor, cinematographer
 <br><br>
-  Shot, edited, and self processed super 8 film in Paris.
+  Shot, edited, and self processed Super 8 film in Paris.
 </p>
 </div>
 
@@ -190,9 +190,7 @@
 <br><br>
   technical director, consulting cinematographer
 <br><br>
-  A friend's thesis film:
-<br>
-  Three vignette stories, each featuring a unique set of actors, thematically meld together into a single story of two college students’ fleeting but impactful time together before they graduate and part ways.
+  Three vignette stories, each featuring a unique set of actors, thematically meld together into a single story of two college students' fleeting but impactful time together before they graduate and part ways.
 </p>
 </div>
 
