--- a/professional.html
+++ b/professional.html
@@ -56,7 +56,7 @@
 <br><br>
   camera, editor 
 <br><br>
-  A short promotional video commissioned by the Mount Holyoke College Theater department.
+  A short promotional video commissioned by the Mount Holyoke College Theatre department.
 </p>
 </div>
 
@@ -157,7 +157,7 @@
 <p>
   TRT 1:05
 <br><br>
-  ​camera
+  camera
 <br><br>
   A short interview with Salman Hameed for Hampshire College.
 </p>
@@ -175,7 +175,7 @@
   <iframe src="https://player.vimeo.com/video/111631355?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
 <p>
-  TRT 1m
+  TRT 1:00
 <br><br>
   cinematographer, editor
 <br><br>
@@ -195,7 +195,7 @@
   <img src="images/NHCC.jpg" alt="Northampton Chamber of Commerce" height="auto" width="800px">
 <br><br>
 <p>
-  ​cinematographer, editor
+  cinematographer, editor
 <br><br>
   Various promotional videos for the Northampton Chamber of Commerce.
 </p>
@@ -215,7 +215,7 @@
 <p>
   TRT 0:15
 <br><br>
-  ​director, editor, cinematographer, concept
+  director, editor, cinematographer, concept
 <br><br>
   A short promotional video for the Frozen Film Festival.
 </p>
@@ -255,7 +255,7 @@
 <p>
   TRT 10:35
 <br><br>
-  ​cinematographer, editor
+  cinematographer, editor
 <br><br>
   Various short videos for the Global Fibrosis Foundation annual dinner.
 </p>
