--- a/index.html
+++ b/index.html
@@ -161,15 +161,15 @@ I am proficient in the following areas of production:
 <h3>Web, Graphics, Coding (2012 - )</h3>
   <h4><a target="_blank" href="https://www.becominghelenkeller.org">Becoming Helen Keller</a></h4>
 <p>
-  Web Design, Graphics - Squarespace, CSS, Photoshop
+  Web Design, Graphics - Squarespace, CSS, HTML, Photoshop
 </p>
   <h4><a target="_blank" href="https://www.beehivesewing.com">Beehive Sewing</a></h4>
 <p>
   Site map, Layout - Wordpress
 </p>
-  <h4>The Global Fibrosis Foundation</h4>
+  <h4><a target="_blank" href="http://globalfibrosis.org/">The Global Fibrosis Foundation</a></h4>
 <p>
-  Web Design, Graphics - Squarespace, CSS, Illustrator
+  Web Design, Graphics - Squarespace, CSS, HTML, Illustrator
 </p>
 </section>
 
