--- a/me.html
+++ b/me.html
@@ -46,6 +46,7 @@ img {
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
 </ul>
+<footer>All content Copyright Ben Cowper, 2017</footer>
 
 <div style="margin-left:17%;padding:1px 16px;height:1000px;">
 
