--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@ I am proficient in the following areas of production:
 
 <section>
 <h3>Film (2007 - )</h3>
+  <h4>Holding Hands with Ilse (2017)</h4>
+<p>
+  Subtitling, Audio Mixing, Post Production Assistant
+</p>
   <h4>Becoming Helen Keller (2016)</h4>
 <p>
   Post Production Assistant, Marketing - PBS American Masters documentary
