--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@ h2 {
 <h2>Ben Cowper</h2>
 <hr color="#50A8AF">
 
-<img src="images/Moon.jpg" alt="moon" height="400px" width="auto">
+<img src="images/Moon.jpg" alt="moon" height="50%" width="auto">
 
 </div>
 </body>
