--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@ h2 {
 </ul>
 <footer>All content Copyright Ben Cowper, 2017</footer>
 
-<div style="margin-left:17%;padding:1px 0px;height:1000px;background-color: #000000;text-align: center;overflow: auto;">
+<div style="margin-left:17%;padding:1px 0px;height:1000px;background-color: red;text-align: center;overflow: auto;">
 
 <hr color="#50A8AF">
 <h2>Ben Cowper</h2>
