--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ h2 {
 
 <body>
 <ul>
-  <li><a href="index.html">me</a></li>
+  <li><a href="me.html">me</a></li>
   <li><a href="personal.html">film - personal</a></li>
   <li><a href="professional.html">film - professional</a></li>
   <li><a href="reel.html">reel</a></li>
