--- a/me.html
+++ b/me.html
@@ -36,7 +36,7 @@ img {
 
 <body>
 <ul>
-  <li><a class="active" href="index.html">me</a></li>
+  <li><a class="active" href="me.html">me</a></li>
   <li><a href="personal.html">film - personal</a></li>
   <li><a href="professional.html">film - professional</a></li>
   <li><a href="reel.html">reel</a></li>
