--- a/tvstudio.html
+++ b/tvstudio.html
@@ -47,7 +47,7 @@
 
 <body>
 <ul>
-  <li><a href="index.html">me</a></li>
+  <li><a href="me.html">me</a></li>
   <li><a href="personal.html">film - personal</a></li>
   <li><a href="professional.html">film - professional</a></li>
   <li><a href="reel.html">reel</a></li>
