--- a/index.html
+++ b/index.html
@@ -27,20 +27,12 @@
 <meta name="msapplication-config" content="icons/browserconfig.xml">
 
 <style type="text/css">
-
 h2 {
     color: white;
 }
 
-.thumbnails img {
-  height: 80px;
-  border: 2px solid #eeeeee;
-  margin: 0 2px 2px 0;
-}
-
-.thumbnails img:hover {
-  border: 2px solid #af5750;
-  cursor:pointer;
+body {
+    background-color: #000000;
 }
 
 .preview img {
@@ -49,7 +41,6 @@ h2 {
 </style>
 </head>
 
-<body>
 <ul>
   <li><a href="me.html">me</a></li>
   <li><a href="personal.html">film - personal</a></li>
@@ -61,9 +52,12 @@ h2 {
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
 </ul>
+
 <footer>All content Copyright Ben Cowper, 2017</footer>
 
-<div style="margin-left:17%;padding:1px 0px;height:1000px;background-color: #000000;text-align: center;overflow: auto;">
+<body>
+
+<div style="margin-left:17%;">
 
 <hr color="#50A8AF">
 <h2>Ben Cowper</h2>
@@ -71,8 +65,9 @@ h2 {
 <br>
 
 <div class="gallery" align="center">
-    <div class="preview" align="center">
-    <img name="preview" src="images/Snowflake.jpg" alt="Snowflake"/>
+ <div class="preview" align="center">
+  <img name="preview" src="images/Snowflake.jpg" alt="Snowflake"/>
+ </div>
 </div>
 
 </div>
