--- a/personal.html
+++ b/personal.html
@@ -27,7 +27,6 @@
 <meta name="msapplication-config" content="icons/browserconfig.xml">
 
 <style type="text/css">
-
 .thumbnails img {
   height: 80px;
   border: 2px solid #eeeeee;
@@ -42,10 +41,13 @@
 .preview img {
   width: 800px;
 }
+p {
+  margin-left: 12%;
+  margin-right: 12%;
+}
 </style>
 </head>
 
-<body>
 <ul>
   <li><a href="me.html">me</a></li>
   <li><a class="active" href="personal.html">film - personal</a></li>
@@ -57,16 +59,18 @@
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
 </ul>
+
 <footer>All content Copyright Ben Cowper, 2017</footer>
 
-<div style="margin-left:17%;padding:1px 16px;height:1000px;">
+<body>
+
+<div style="margin-left:17%;">
 
 <hr color="#50A8AF">
-<h2>
-  Dreams (series, 2016 - )
-</h2>
+<h2>Dreams (series, 2016 - )</h2>
 <hr color="#50A8AF">
 <br>
+
 <div align="center">
   <iframe src="https://player.vimeo.com/video/174029936?color=af5750&title=0&byline=0&portrait=0" width="450" height="253" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>  
   <iframe src="https://player.vimeo.com/video/165776517?color=af5750&title=0&byline=0&portrait=0" width="450" height="253" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -85,11 +89,10 @@
 
 <a name="nona"></a>
 <hr color="#50A8AF">
-<h2>
-	Nona (2016)
-</h2>
+<h2>Nona (2016)</h2>
 <hr color="#50A8AF">
 <br>
+
 <div class="gallery" align="center">
     <div class="preview" align="center">
     <img name="preview" src="images/Nona1.jpg" alt="Nona"/>
@@ -239,11 +242,10 @@
 
 <a name="hazardlights"></a>
 <hr color="#50A8AF">
-<h2>
-  Hazard Lights (2014)
-</h2>
+<h2>Hazard Lights (2014)</h2>
 <hr color="#50A8AF">
 <br>
+
 <div align="center">
   <iframe src="https://player.vimeo.com/video/106734653?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
