--- a/photo.html
+++ b/photo.html
@@ -45,7 +45,6 @@
 </style>
 </head>
 
-<body>
 <ul>
   <li><a href="me.html">me</a></li>
   <li><a href="personal.html">film - personal</a></li>
@@ -57,16 +56,19 @@
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
 </ul>
+
 <footer>All content Copyright Ben Cowper, 2017</footer>
 
-<div style="margin-left:17%;padding:1px 16px;height:1000px;">
+<body>
+
+<div style="margin-left:17%;">
 
 <a name="photography"></a>
 <hr color="#50A8AF">
-<h2>
-  Photography
-</h2>
+<h2>Photography</h2>
 <hr color="#50A8AF">
+<br>
+
   <div class="thumbnails" align="center">
     <img onmouseover="preview.src=Sunglasses.src" name="Sunglasses" src="images/Sunglasses.jpg" alt="Sunglasses"/>
     <img onmouseover="preview.src=Snowflake.src" name="Snowflake" src="images/Snowflake.jpg" alt="Snowflakes"/>
