--- a/me.html
+++ b/me.html
@@ -26,15 +26,14 @@
 <meta name="msapplication-TileImage" content="icons/favicon-144.png">
 <meta name="msapplication-config" content="icons/browserconfig.xml">
 
-<style>
+<style type="text/css">
 img {
   float: left;
-  margin: 0px 17px 0px 0px;
+  margin: 0px 1.5% 0px 1.5%;
 }
 </style>
 </head>
 
-<body>
 <ul>
   <li><a class="active" href="me.html">me</a></li>
   <li><a href="personal.html">film - personal</a></li>
@@ -46,17 +45,21 @@ img {
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
 </ul>
+
 <footer>All content Copyright Ben Cowper, 2017</footer>
 
-<div style="margin-left:17%;padding:1px 16px;height:1000px;">
+<body>
+
+<div style="margin-left:17%;">
 
 <hr color="#50A8AF">
 <h2>Ben Cowper</h2>
 <h3>cowpervideos@gmail.com</h3>
 <hr color="#50A8AF">
-
 <br>
-<p><img src="images/Ben_Cowper.jpg" alt="Ben Cowper" height="350px" width="auto">
+
+<p>
+<img src="images/Ben_Cowper.jpg" alt="Ben Cowper" height="350px" width="auto">
 I began my work in film production over 10 years ago, and in 2016 received a Bachelor of Arts in Cinematography and Editing from Hampshire College. As a freelance videographer I have filmed and edited over 100 videos for a wide variety of commercial and independent clients including: Yale University, Hampshire College, Mount Holyoke College, PBS American Masters, Cambridge University Press, ServiceNet, Northampton Chamber of Commerce, Beehive Sewing, and the Global Fibrosis Foundation.
 </p>
 <p>
@@ -78,6 +81,7 @@ I am proficient in the following areas of production:
   <b>Lighting Design:</b>
   Film, Television, and Theatre: Arri, Lowel, Kino, ETC
 </p>
+
 <br><br>
 
 <hr color="#af5750">
