--- a/reel.html
+++ b/reel.html
@@ -27,7 +27,6 @@
 <meta name="msapplication-config" content="icons/browserconfig.xml">
 </head>
 
-<body>
 <ul>
   <li><a href="me.html">me</a></li>
   <li><a href="personal.html">film - personal</a></li>
@@ -39,16 +38,18 @@
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
 </ul>
+
 <footer>All content Copyright Ben Cowper, 2017</footer>
 
-<div style="margin-left:17%;padding:1px 16px;height:1000px;">
+<body>
+
+<div style="margin-left:17%;">
 
 <hr color="#50A8AF">
-<h2>
-	Cinematography & Editing Reel (2016)
-</h2>
+<h2>Cinematography & Editing Reel (2016)</h2>
 <hr color="#50A8AF">
 <br>
+
 <div align="center">
 	<iframe src="https://player.vimeo.com/video/87645149?color=af5750&title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <br><br>
