--- a/tvstudio.html
+++ b/tvstudio.html
@@ -27,7 +27,6 @@
 <meta name="msapplication-config" content="icons/browserconfig.xml">
 
 <style type="text/css">
-
 .thumbnails img {
   height: 80px;
   border: 2px solid #eeeeee;
@@ -45,7 +44,6 @@
 </style>
 </head>
 
-<body>
 <ul>
   <li><a href="me.html">me</a></li>
   <li><a href="personal.html">film - personal</a></li>
@@ -57,16 +55,19 @@
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
 </ul>
+
 <footer>All content Copyright Ben Cowper, 2017</footer>
 
-<div style="margin-left:17%;padding:1px 16px;height:1000px;">
+<body>
+
+<div style="margin-left:17%;">
 
 <a name="TV Studio Renovation"></a>
 <hr color="#50A8AF">
-<h2>
-  TV Studio Renovation (Summer 2017)
-</h2>
+<h2>TV Studio Renovation (Summer 2017)</h2>
 <hr color="#50A8AF">
+<br>
+
   <div class="thumbnails" align="center">
     <h3>Cyclorama Construction</h3>
     <img onmouseover="preview.src=Cyclorama1.src" name="Cyclorama1" src="images/Cyc1.jpg" alt="Cyclorama"/>
