--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ body {
 
 <div class="gallery" align="center">
  <div class="preview" align="center">
-  <img name="preview" src="images/Snowflake.jpg" alt="Snowflake"/>
+  <a href="me.html"><img name="preview" src="images/Snowflake.jpg" alt="Snowflake"/></a>
  </div>
 </div>
 
