--- a/me.html
+++ b/me.html
@@ -79,7 +79,7 @@ I am proficient in the following areas of production:
 </p>
 <p>
   <b>Lighting Design:</b>
-  Film, Television, and Theatre: Arri, Lowel, Kino, ETC
+  Film, Television, Theatre: Arri, Lowel, Kino, ETC
 </p>
 
 <br><br>
