--- a/me.html
+++ b/me.html
@@ -110,7 +110,7 @@ I am proficient in the following areas of production:
 </p>
   <h4><a href="/personal.html#somethingrestless">Something Restless (2015)</a></h4>
 <p>
-  Technical Director - Friend's thesis film at Hampshire College
+  Technical Director, 5.1 audio mix engineer - Friend's thesis film at Hampshire College
 </p>
   <h4><a href="/personal.html#hazardlights">Hazard Lights (2014)</a></h4>
 <p>
