--- a/personal.html
+++ b/personal.html
@@ -192,7 +192,7 @@ p {
 <p>
   TRT 35:19
 <br><br>
-  technical director, consulting cinematographer
+  technical director, consulting cinematographer, 5.1 audio mix engineer
 <br><br>
   Three vignette stories, each featuring a unique set of actors, thematically meld together into a single story of two college students' fleeting but impactful time together before they graduate and part ways.
 </p>
