--- a/me.html
+++ b/me.html
@@ -26,12 +26,6 @@
 <meta name="msapplication-TileImage" content="icons/favicon-144.png">
 <meta name="msapplication-config" content="icons/browserconfig.xml">
 
-<style type="text/css">
-img {
-  float: left;
-  margin: 0px 1.5% 0px 1.5%;
-}
-</style>
 </head>
 
 <ul>
@@ -58,149 +52,136 @@ img {
 <hr color="#50A8AF">
 <br>
 
-<p>
+<p style="text-align:center;">
 <img src="images/Ben_Cowper.jpg" alt="Ben Cowper" height="350px" width="auto">
+</p>
+
+<p>
 I began my work in film production over 10 years ago, and in 2016 received a Bachelor of Arts in Cinematography and Editing from Hampshire College. As a freelance videographer I have filmed and edited over 100 videos for a wide variety of commercial and independent clients including: Yale University, Hampshire College, Mount Holyoke College, PBS American Masters, Cambridge University Press, ServiceNet, Northampton Chamber of Commerce, Beehive Sewing, and the Global Fibrosis Foundation.
-</p>
-<p>
-I am proficient in the following areas of production:
-</p>
-<p>
-  <b>Cinematography:</b>
-  Canon 5DmkIII (Magic Lantern), Canon C100, Blackmagic, GoPro, 16mm Bolex, Super 8, Glidecam, still photography (digital, 35mm, medium, large format)
-</p>
-<p>
-  <b>Editing:</b>
-  Adobe Premiere, After Effects, Photoshop, Final Cut Pro, DaVinci Resolve
-</p>
-<p>
-  <b>Audio:</b>
-  5.1 surround and stereo recording/mixing: Zoom, Tascam, ProTools, Audition, Logic
-</p>
-<p>
-  <b>Lighting Design:</b>
-  Film, Television, Theatre: Arri, Lowel, Kino, ETC
-</p>
 
 <br><br>
 
+I am highly skilled in the following roles:
+<br><br>
+  <b>Cinematographer</b>
+  DSLR (5DmkIII with Magic Lantern), Blackmagic, Canon C100, GoPro, 16mm Bolex, Super 8
+<br><br>
+  <b>Editor, Colorist</b>
+  Adobe Premiere, After Effects, Photoshop, Final Cut Pro, DaVinci Resolve
+<br><br>
+  <b>Audio Engineer</b>
+  5.1 surround and stereo recording/mixing: ProTools, Audition, Logic
+<br><br>
+  <b>Web Design, Coding</b>
+  Python, HTML, CSS, LATEX, Arduino, Apple, Google, Microsoft, Squarespace, Wordpress
+<br><br>
+  <b>Lighting Designer</b>
+  Designing and drawing lighting plots for film and theatre productions
+<br><br>
+  <b>Photographer</b>
+  Digital, 35mm, medium format, and large format
+<br><br>
+  <b>Archivist</b>
+  Digitally transferring and preserving archaic media formats
+<br><br>
+  <b>Live Streaming</b>
+  Installation and live switching of audio and video streams for television, theatre, and conferences
+</p>
+
+<br>
+
 <hr color="#af5750">
 
-<section>
-<h3>Film (2007 - )</h3>
-  <h4>Holding Hands with Ilse (2017)</h4>
-<p>
-  Subtitling, Audio Mixing, Post Production Assistant
-</p>
-  <h4>Becoming Helen Keller (2016)</h4>
-<p>
-  Post Production Assistant, Marketing - PBS American Masters documentary
-</p>
-  <h4><a href="/personal.html#nona">Nona (2016)</a></h4>
-<p>
-  Director, Cinematographer, Editor - My thesis film at Hampshire College
-</p>
-  <h4><a target="_blank" href="https://vimeo.com/140096300">Darkville (2015 - 2016)</a></h4>
-<p>
-  Director of Photography - Channel 101 show screened at UCB Theatre (2 episodes)
-</p>
-  <h4><a target="_blank" href="http://shanghaiquartetfilm.com">The Shanghai String Quartet (2016)</a></h4>
-<p>
-  Production Assistant - Audio recording for documentary film
-</p>
-  <h4><a href="/personal.html#somethingrestless">Something Restless (2015)</a></h4>
-<p>
-  Technical Director, 5.1 audio mix engineer - Friend's thesis film at Hampshire College
-</p>
-  <h4><a href="/personal.html#hazardlights">Hazard Lights (2014)</a></h4>
-<p>
-  Assistant Director - Friend's thesis film at Hampshire College
-</p>
-  <h4><a target="_blank" href="https://www.youtube.com/watch?v=0iOustk_6WY">The Games We Play (2014)</a></h4>
-<p>
-  Camera Operator - Friend's thesis film at Hampshire College
-</p>
-</section>
+<div id="contentBox" style="margin:0% auto; width:100%">
 
-<section>
-<h3>Teaching (2012 - )</h3>
-  <h4>Media Alumni Fellow (2017)
-  <br>
-  Hampshire College</h4>
-<p>
-  Taught workshops in media production, mentored students and faculty with independent projects
-</p>
-  <h4>Guest Instructor (2016)
-  <br>
-  Amherst College</h4>
-<p>
-  FAMS-228: Super 8 Film and Digital Video
-</p>
-  <h4>Assistant Instructor (2015 - 2016)
-  <br>
-  Creative Media Institute</h4>
-<p>
-  Summer film program, 2 years
-</p>
-  <h4>Teaching Assistant (2014 - 2016)
-  <br>
-  Hampshire College</h4>
-<p>
-  HACU-0287: Performance & Directing
-  <br>
-  HACU-0209: Video 1
-  <br>
-  NS-0254: Science Fiction Film
-</p>
-  <h4>Instructor (2014)
-  <br>
-  Hampshire College</h4>
-<p>
-  Video Production Collective: Designed and taught a college level film course for 12 students
-</p>
-  <h4>Teaching Assistant (2012)
-  <br>
-  Kingswood Oxford</h4>
-<p>
-  Advanced Digital Video
-</p>
-</section>
+	<div id="column1" style="float:left; margin:auto; padding: 1%; width:30%;">
+		<h3>Film (2007 - )</h3>
+		<h4>Holding Hands with Ilse (2017)</h4>
+		<p>Subtitling, Audio Mixing, Post Production Assistant</p>
+  	
+	  	<h4>Becoming Helen Keller (2016)</h4>
+		<p>Post Production Assistant, Marketing - PBS American Masters documentary</p>
 
-<section>
-<h3>Web, Graphics, Coding (2012 - )</h3>
-  <h4><a target="_blank" href="https://www.becominghelenkeller.org">Becoming Helen Keller</a></h4>
-<p>
-  Web Design, Graphics - Squarespace, CSS, HTML, Photoshop
-</p>
-  <h4><a target="_blank" href="https://www.beehivesewing.com">Beehive Sewing</a></h4>
-<p>
-  Site map, Layout - Wordpress
-</p>
-  <h4><a target="_blank" href="http://globalfibrosis.org/">The Global Fibrosis Foundation</a></h4>
-<p>
-  Web Design, Graphics - Squarespace, CSS, HTML, Illustrator
-</p>
-</section>
+		<h4><a href="/personal.html#nona">Nona (2016)</a></h4>
+		<p>Director, Cinematographer, Editor - My thesis film at Hampshire College</p>
 
-<section>
-<h3>Awards, Grants, Certifications</h3>
-  <h4>Tom Joslin Grant (2016)</h4>
-<p>
-  Recipient for my thesis film at Hampshire College
-</p>
-  <h4>Teaching Assistant Certificate (2015)</h4>
-<p>
-  Completed seminar in teaching
-</p>
-  <h4>Green Prize (2012)</h4>
-<p>
-  Recipient for excellence in dramatics at Kingswood Oxford
-</p>
-  <h4>Williston-Northampton Film Festival (2012)</h4>
-<p>
-  Director of a short film screened at festival
-</p>
-</section>
+		<h4><a target="_blank" href="https://vimeo.com/140096300">Darkville (2015 - 2016)</a></h4>
+		<p>Director of Photography - Channel 101 show screened at UCB Theatre (2 episodes)</p>
+
+	  	<h4><a target="_blank" href="http://shanghaiquartetfilm.com">The Shanghai String Quartet (2016)</a></h4>
+		<p>Production Assistant - Audio recording for documentary film</p>
+
+	  	<h4><a href="/personal.html#somethingrestless">Something Restless (2015)</a></h4>
+		<p>Technical Director, 5.1 audio mix engineer - Friend's thesis film at Hampshire College</p>
+
+		<h4><a href="/personal.html#hazardlights">Hazard Lights (2014)</a></h4>
+		<p>Assistant Director - Friend's thesis film at Hampshire College</p>
+
+		<h4><a target="_blank" href="https://www.youtube.com/watch?v=0iOustk_6WY">The Games We Play (2014)</a></h4>
+		<p>Camera Operator - Friend's thesis film at Hampshire College</p>
+	</div>
+
+	<div id="column2" style="float:left; margin:auto; padding: 1%; width:30%;">
+		<h3>Teaching (2012 - )</h3>
+		<h4>Media Alumni Fellow (2017)
+		<br>
+		Hampshire College</h4>
+		<p>Taught workshops in media production, mentored students and faculty with independent projects</p>
+
+		<h4>Guest Instructor (2016)
+		<br>
+		Amherst College</h4>
+		<p>FAMS-228: Super 8 Film and Digital Video</p>
+
+		<h4>Assistant Instructor (2015 - 2016)
+		<br>
+		Creative Media Institute</h4>
+		<p>Summer film program, 2 years</p>
+
+		<h4>Teaching Assistant (2014 - 2016)
+		<br>
+		Hampshire College</h4>
+		<p>HACU-0287: Performance & Directing
+		<br>
+		HACU-0209: Video 1
+		<br>
+		NS-0254: Science Fiction Film</p>
+
+		<h4>Instructor (2014)
+		<br>
+		Hampshire College</h4>
+		<p>Video Production Collective: Designed and taught a college level film course for 12 students</p>
+
+		<h4>Teaching Assistant (2012)
+		<br>
+		Kingswood Oxford</h4>
+		<p>Advanced Digital Video</p>
+    </div>
+
+	<div id="column3" style="float:left; margin:auto; padding: 1%; width:30%">
+
+		<h3>Web, Graphics, Coding (2012 - )</h3>
+		<h4><a target="_blank" href="https://www.becominghelenkeller.org">Becoming Helen Keller</a></h4>
+		<p>Web Design, Graphics - Squarespace, CSS, HTML, Photoshop</p>
+		<h4><a target="_blank" href="https://www.beehivesewing.com">Beehive Sewing</a></h4>
+		<p>Site map, Layout - Wordpress</p>
+		<h4><a target="_blank" href="http://globalfibrosis.org/">The Global Fibrosis Foundation</a></h4>
+		<p>Web Design, Graphics - Squarespace, CSS, HTML, Illustrator</p>
+
+		<br>
+
+		<h3>Awards, Grants, Certifications</h3>
+		<h4>Tom Joslin Grant (2016)</h4>
+		<p>Recipient for my thesis film at Hampshire College</p>
+		<h4>Teaching Assistant Certificate (2015)</h4>
+		<p>Completed seminar in teaching</p>
+		<h4>Green Prize (2012)</h4>
+		<p>Recipient for excellence in dramatics at Kingswood Oxford</p>
+		<h4>Williston-Northampton Film Festival (2012)</h4>
+		<p>Director of a short film screened at festival</p>
+	</div>
+
+</div>
 
 <br><br>
 
