--- a/me.html
+++ b/me.html
@@ -57,7 +57,7 @@
 </p>
 
 <p>
-I began my work in film production over 10 years ago, and in 2016 received a Bachelor of Arts in Cinematography and Editing from Hampshire College. As a freelance videographer I have filmed and edited over 100 videos for a wide variety of commercial and independent clients including: Yale University, Hampshire College, Mount Holyoke College, PBS American Masters, Cambridge University Press, ServiceNet, Northampton Chamber of Commerce, Beehive Sewing, and the Global Fibrosis Foundation.
+In 2016 I received a Bachelor of Arts in Cinematography and Editing from Hampshire College. I have always loved working with video, and began producing professional work as early as 2007. Since then, I have filmed and edited over 100 projects for a wide variety of individuals, artists, and commercial clients including: Yale University, Hampshire College, Mount Holyoke College, PBS <i>American Masters</i>, Cambridge University Press, ServiceNet, Northampton Chamber of Commerce, Beehive Sewing, and the Global Fibrosis Foundation.
 
 <br><br>
 
@@ -95,18 +95,18 @@ I am highly skilled in the following roles:
 <div id="contentBox" style="margin:0% auto; width:100%">
 
 	<div id="column1" style="float:left; margin:auto; padding: 1%; width:30%;">
-		<h3>Film (2007 - )</h3>
+		<h3>Film</h3>
 		<h4>Holding Hands with Ilse (2017)</h4>
 		<p>Subtitling, Audio Mixing, Post Production Assistant</p>
   	
 	  	<h4>Becoming Helen Keller (2016)</h4>
-		<p>Post Production Assistant, Marketing - PBS American Masters documentary</p>
+		<p>Post Production Assistant, Digital Marketing - PBS <i>American Masters</i> documentary</p>
 
 		<h4><a href="/personal.html#nona">Nona (2016)</a></h4>
 		<p>Director, Cinematographer, Editor - My thesis film at Hampshire College</p>
 
 		<h4><a target="_blank" href="https://vimeo.com/140096300">Darkville (2015 - 2016)</a></h4>
-		<p>Director of Photography - Channel 101 show screened at UCB Theatre (2 episodes)</p>
+		<p>Director of Photography (2 episodes) - Channel 101 show screened at UCB Theatre in New York</p>
 
 	  	<h4><a target="_blank" href="http://shanghaiquartetfilm.com">The Shanghai String Quartet (2016)</a></h4>
 		<p>Production Assistant - Audio recording for documentary film</p>
@@ -122,11 +122,11 @@ I am highly skilled in the following roles:
 	</div>
 
 	<div id="column2" style="float:left; margin:auto; padding: 1%; width:30%;">
-		<h3>Teaching (2012 - )</h3>
+		<h3>Teaching</h3>
 		<h4>Media Alumni Fellow (2017)
 		<br>
 		Hampshire College</h4>
-		<p>Taught workshops in media production, mentored students and faculty with independent projects</p>
+		<p>Served as the primary resource for faculty and students needing media production assistance, put together instructional videos and guides for equipment, led workshops, and lectured on color grading and video editing</p>
 
 		<h4>Guest Instructor (2016)
 		<br>
@@ -150,7 +150,7 @@ I am highly skilled in the following roles:
 		<h4>Instructor (2014)
 		<br>
 		Hampshire College</h4>
-		<p>Video Production Collective: Designed and taught a college level film course for 12 students</p>
+		<p>Video Production Collective: I created and taught a college level video production course completed by 12 students, for which they received academic credit</p>
 
 		<h4>Teaching Assistant (2012)
 		<br>
@@ -160,7 +160,7 @@ I am highly skilled in the following roles:
 
 	<div id="column3" style="float:left; margin:auto; padding: 1%; width:30%">
 
-		<h3>Web, Graphics, Coding (2012 - )</h3>
+		<h3>Web, Graphics, Coding</h3>
 		<h4><a target="_blank" href="https://www.becominghelenkeller.org">Becoming Helen Keller</a></h4>
 		<p>Web Design, Graphics - Squarespace, CSS, HTML, Photoshop</p>
 		<h4><a target="_blank" href="https://www.beehivesewing.com">Beehive Sewing</a></h4>
@@ -172,13 +172,13 @@ I am highly skilled in the following roles:
 
 		<h3>Awards, Grants, Certifications</h3>
 		<h4>Tom Joslin Grant (2016)</h4>
-		<p>Recipient for my thesis film at Hampshire College</p>
+		<p>Received funding for my thesis film <i>Nona</i> at Hampshire College</p>
 		<h4>Teaching Assistant Certificate (2015)</h4>
 		<p>Completed seminar in teaching</p>
 		<h4>Green Prize (2012)</h4>
-		<p>Recipient for excellence in dramatics at Kingswood Oxford</p>
+		<p>Awarded for excellence in dramatics at Kingswood Oxford</p>
 		<h4>Williston-Northampton Film Festival (2012)</h4>
-		<p>Director of a short film screened at festival</p>
+		<p>Director of a short film screened at the festival</p>
 	</div>
 
 </div>
