--- a/tvstudio.html
+++ b/tvstudio.html
@@ -92,7 +92,7 @@
   </div>
 <br><br>
 <p>
-  Renovated old SD TV studio into 4K broadcast facility with cyclorama and 4 camera live switching.
+As the Media Alumni Fellow at Hamphsire College, I upgraded the existing media production facilities. This included designing and constructing a 4K broadcast TV studio with a cyclorama green screen and four camera live switching. I also upgraded workstation computers in four advanced media labs, and serviced and operated a Form Labs 3D printer/scanner.
 </p>
 </div>
 
