--- a/me.html
+++ b/me.html
@@ -12,6 +12,8 @@
   gtag('config', 'UA-106541861-1');
 </script>
 
+<meta name=viewport content="width=device-width, initial-scale=1">
+
 <title>Ben Cowper | me</title>
 <link rel="stylesheet" href="styles.css">
 <link rel="author" href="humans.txt" />
@@ -36,6 +38,13 @@
 <meta name="msapplication-TileColor" content="#FFFFFF">
 <meta name="msapplication-TileImage" content="icons/favicon-144.png">
 <meta name="msapplication-config" content="icons/browserconfig.xml">
+
+<style type="text/css">
+.preview img {
+  width: 30%;
+  height: 30%;
+}
+</style>
 
 </head>
 
@@ -63,9 +72,11 @@
 <hr color="#50A8AF">
 <br>
 
-<p style="text-align:center;">
-<img src="images/Ben_Cowper.jpg" alt="Ben Cowper" height="350px" width="auto">
-</p>
+<div class="gallery" align="center">
+ <div class="preview" align="center">
+  <img name="preview" src="images/Ben_Cowper.jpg" alt="Ben Cowper"/>
+ </div>
+</div>
 
 <p>
 In 2016 I received a Bachelor of Arts in Cinematography and Editing from Hampshire College. I have always loved working with video, and began producing professional work as early as 2007. Since then, I have filmed and edited over 100 projects for a wide variety of individuals, artists, and commercial clients including: Yale University, Hampshire College, Mount Holyoke College, PBS <i>American Masters</i>, Cambridge University Press, ServiceNet, Northampton Chamber of Commerce, Beehive Sewing, and the Global Fibrosis Foundation.
